# cffi-stubgen

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yaml
cffi-stubgen/: __init__.py  __main__.py  functions.py  stubgen.py
cffi_stubgen/: __main__.py  functions.py  stubgen.py
example/test_module/: pyproject.toml  setup.py
tests/: test_main.py  test_parsing.py
